# shroudb-cipher

./: ABOUT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOCS.md  Dockerfile  ENGINE_DAG.md  README.md  TODOS.md  protocol.toml  shroudb-cipher.md
.github/workflows/: release.yml
shroudb-cipher-blind/: Cargo.toml
shroudb-cipher-blind/src/: lib.rs
shroudb-cipher-cli/: Cargo.toml
shroudb-cipher-cli/src/: main.rs
shroudb-cipher-client/: Cargo.toml
shroudb-cipher-client/src/: connection.rs  error.rs  lib.rs
shroudb-cipher-core/: Cargo.toml
shroudb-cipher-core/src/: ciphertext.rs  error.rs  key_version.rs  keyring.rs  lib.rs  policy.rs
shroudb-cipher-engine/: Cargo.toml
shroudb-cipher-engine/src/: crypto_ops.rs  engine.rs  keyring_manager.rs  lib.rs  scheduler.rs  test_support.rs
shroudb-cipher-protocol/: Cargo.toml
shroudb-cipher-protocol/src/: commands.rs  dispatch.rs  lib.rs  response.rs
shroudb-cipher-server/: Cargo.toml
shroudb-cipher-server/src/: config.rs  main.rs  tcp.rs
shroudb-cipher-server/tests/: integration.rs
shroudb-cipher-server/tests/common/: mod.rs
