[workspace]
resolver = "3"
default-members = ["shroudb-cipher-server"]
members = [
    "shroudb-cipher-core",
    "shroudb-cipher-engine",
    "shroudb-cipher-protocol",
    "shroudb-cipher-server",
    "shroudb-cipher-client",
    "shroudb-cipher-cli",
]

[workspace.package]
version = "1.4.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
publish = ["shroudb"]

[workspace.dependencies]
# Internal crates
shroudb-cipher-core = { path = "shroudb-cipher-core", version = "1.4.0", registry = "shroudb" }
shroudb-cipher-engine = { path = "shroudb-cipher-engine", version = "1.4.0", registry = "shroudb" }
shroudb-cipher-protocol = { path = "shroudb-cipher-protocol", version = "1.4.0", registry = "shroudb" }
shroudb-cipher-client = { path = "shroudb-cipher-client", version = "1.4.0", registry = "shroudb" }

# ShrouDB commons (shroudb registry)
shroudb-store = { version = "0.1.2", registry = "shroudb" }
shroudb-storage = { version = "0.2.13", registry = "shroudb" }
shroudb-acl = { version = "0.1.4", registry = "shroudb" }
shroudb-crypto = { version = "0.1.1", registry = "shroudb" }
shroudb-chronicle-core = { version = "1.2.2", registry = "shroudb" }
shroudb-protocol-wire = { version = "0.1.0", registry = "shroudb" }

# Crypto
ring = "0.17"

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Obfuscation
obfuskey = "0.1"

# Security
zeroize = { version = "1", features = ["derive"] }

# Utilities
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
base64 = "0.22"
dashmap = "6"
