[package]
name = "shroudb-cipher-blind"
description = "Client-side encryption for Cipher E2EE workflows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
shroudb-cipher-core.workspace = true
shroudb-crypto.workspace = true

ring.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hex.workspace = true
base64.workspace = true
zeroize.workspace = true
