[package]
name = "shroudb-cipher-blind"
description = "Client-side encryption for Cipher E2EE workflows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["server-crypto"]
server-crypto = ["shroudb-crypto/server", "shroudb-cipher-core/server-crypto"]
wasm = ["dep:getrandom"]

[dependencies]
shroudb-cipher-core = { workspace = true, default-features = false }
shroudb-crypto = { workspace = true, default-features = false }

ring.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hex.workspace = true
base64.workspace = true
zeroize.workspace = true

# WASM browser entropy (crypto.getRandomValues)
getrandom = { version = "0.2", features = ["js"], optional = true }
