[package]
name = "shroudb-cipher-cli"
description = "CLI tool for the Cipher encryption-as-a-service engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "shroudb-cipher-cli"
path = "src/main.rs"

[dependencies]
shroudb-cipher-client.workspace = true

tokio.workspace = true
clap.workspace = true
serde_json.workspace = true
anyhow.workspace = true
