[package]
name = "shroudb-cipher-core"
description = "Domain types for the Cipher encryption-as-a-service engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
shroudb-crypto.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
base64.workspace = true
obfuskey.workspace = true
hex.workspace = true
zeroize.workspace = true
