[package]
name = "shroudb-cipher-engine"
description = "Store-backed encryption-as-a-service engine for Cipher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
shroudb-cipher-core = { workspace = true, features = ["server-crypto"] }
shroudb-store.workspace = true
shroudb-crypto = { workspace = true, features = ["server"] }
shroudb-acl.workspace = true
shroudb-audit.workspace = true
shroudb-chronicle-core.workspace = true
shroudb-courier-core.workspace = true
shroudb-server-bootstrap.workspace = true

ring.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
dashmap.workspace = true
base64.workspace = true
hex.workspace = true
zeroize.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
shroudb-storage = { workspace = true, features = ["testing"] }
